[gd_scene load_steps=20 format=3 uid="uid://buxya1i2sigoj"]

[ext_resource type="Script" path="res://board.gd" id="1_d3f3c"]
[ext_resource type="Texture2D" uid="uid://c6itxlrwe6e4v" path="res://Solaria Demo Update 01.png" id="1_t1u46"]
[ext_resource type="Texture2D" uid="uid://bivtcc5bsy3ih" path="res://Actor1.png" id="2_qa7rh"]
[ext_resource type="PackedScene" uid="uid://chca6o6w7gneo" path="res://ui.tscn" id="2_vj12o"]
[ext_resource type="Script" path="res://Sprite2D.gd" id="3_38k2e"]
[ext_resource type="Script" path="res://ui.gd" id="4_5sndb"]
[ext_resource type="PackedScene" uid="uid://kyvdagipo0f0" path="res://hud.tscn" id="7_8jxp3"]
[ext_resource type="Script" path="res://CharacterBody2D.gd" id="8_typ0w"]
[ext_resource type="Texture2D" uid="uid://bhf07sh1ke1ev" path="res://icon.svg" id="9_eam0l"]
[ext_resource type="Script" path="res://GameManager.gd" id="10_7tq1y"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o0qef"]
texture = ExtResource("1_t1u46")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
0:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
27:3/0 = 0
0:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
27:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
21:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
27:12/0 = 0
0:13/0 = 0
2:13/0 = 0
3:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
0:14/0 = 0
2:14/0 = 0
3:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0

[sub_resource type="TileSet" id="TileSet_a4xcf"]
sources/0 = SubResource("TileSetAtlasSource_o0qef")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_meetu"]

[sub_resource type="Animation" id="Animation_634vo"]
resource_name = "Idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_gvlji"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [36]
}

[sub_resource type="Animation" id="Animation_olpf8"]
resource_name = "WalkLeft"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 13]
}

[sub_resource type="Animation" id="Animation_4ii7n"]
resource_name = "WalkRight"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 25]
}

[sub_resource type="Animation" id="Animation_5y7iv"]
resource_name = "WalkUp"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 37]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v4kk3"]
_data = {
"Idle": SubResource("Animation_634vo"),
"RESET": SubResource("Animation_gvlji"),
"WalkLeft": SubResource("Animation_olpf8"),
"WalkRight": SubResource("Animation_4ii7n"),
"WalkUp": SubResource("Animation_5y7iv")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_d3f3c")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("10_7tq1y")

[node name="CanvasLayer" parent="." instance=ExtResource("2_vj12o")]
visible = false
script = ExtResource("4_5sndb")

[node name="HUD" parent="." instance=ExtResource("7_8jxp3")]
offset = Vector2(8.85, 0)
transform = Transform2D(1, 0, 0, 1, 8.85, 0)

[node name="Ground" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_a4xcf")
format = 2
layer_0/tile_data = PackedInt32Array(-524303, 327680, 6, -458767, 327680, 6, -393231, 327680, 6, -327695, 327680, 6, -262159, 327680, 6, -196623, 327680, 6, -131087, 327680, 6, -65551, 327680, 6, -15, 327680, 6, 65521, 327680, 6, 131057, 327680, 6, 196593, 327680, 6, 262129, 327680, 6, 327665, 327680, 6, 393201, 327680, 6, 458737, 327680, 6, 524273, 327680, 6, 589809, 327680, 6, -524302, 327680, 6, -458766, 327680, 6, -393230, 393216, 7, -327694, 327680, 6, -262158, 393216, 6, -196622, 327680, 6, -131086, 327680, 6, -65550, 327680, 6, -14, 327680, 6, 65522, 327680, 6, 131058, 327680, 6, 196594, 327680, 6, 262130, 327680, 6, 327666, 393216, 6, 393202, 327680, 6, 458738, 327680, 6, 524274, 327680, 6, 589810, 327680, 6, -524301, 0, 7, -458765, 0, 7, -393229, 0, 7, -327693, 0, 7, -262157, 0, 7, -196621, 0, 7, -131085, 0, 7, -65549, 0, 7, -13, 0, 7, 65523, 0, 8, 131059, 327680, 6, 196595, 327680, 6, 262131, 327680, 6, 327667, 327680, 6, 393203, 327680, 6, 458739, 393216, 7, 524275, 327680, 6, 589811, 327680, 6, -524300, 327680, 0, -458764, 327680, 0, -393228, 327680, 0, -327692, 327680, 0, -262156, 327680, 0, -196620, 327680, 0, -131084, 327680, 0, -65548, 327680, 0, -12, 327680, 0, 65524, 262144, 6, 131060, 0, 8, 196596, 327680, 6, 262132, 393216, 7, 327668, 327680, 6, 393204, 327680, 6, 458740, 327680, 6, 524276, 327680, 6, 589812, 327680, 6, -524299, 327680, 0, -458763, 327680, 0, -393227, 327680, 0, -327691, 327680, 0, -262155, 327680, 0, -196619, 327680, 0, -131083, 327680, 0, -65547, 327680, 0, -11, 327680, 0, 65525, 327680, 0, 131061, 262144, 6, 196597, 0, 7, 262133, 0, 7, 327669, 0, 7, 393205, 0, 7, 458741, 0, 7, 524277, 0, 7, 589813, 0, 7, -524298, 327680, 0, -458762, 327680, 0, -393226, 327680, 0, -327690, 327680, 0, -262154, 327680, 0, -196618, 327680, 0, -131082, 327680, 0, -65546, 327680, 0, -10, 327680, 0, 65526, 393216, 1, 131062, 327680, 0, 196598, 327680, 0, 262134, 327680, 0, 327670, 327680, 0, 393206, 327680, 0, 458742, 327680, 0, 524278, 327680, 0, 589814, 327680, 0, -524297, 327680, 0, -458761, 327680, 0, -393225, 327680, 0, -327689, 327680, 0, -262153, 327680, 0, -196617, 327680, 0, -131081, 327680, 0, -65545, 327680, 0, -9, 327680, 0, 65527, 327680, 0, 131063, 393216, 1, 196599, 327680, 0, 262135, 327680, 0, 327671, 327680, 1, 393207, 327680, 0, 458743, 327680, 0, 524279, 327680, 0, 589815, 327680, 0, -524296, 327680, 0, -458760, 327680, 0, -393224, 393216, 0, -327688, 327680, 0, -262152, 327680, 0, -196616, 327680, 0, -131080, 327680, 0, -65544, 327680, 0, -8, 327680, 0, 65528, 327680, 0, 131064, 327680, 0, 196600, 327680, 0, 262136, 327680, 0, 327672, 327680, 0, 393208, 327680, 0, 458744, 327680, 0, 524280, 327680, 0, 589816, 327680, 0, -524295, 327680, 0, -458759, 327680, 0, -393223, 327680, 0, -327687, 327680, 0, -262151, 327680, 0, -196615, 327680, 0, -131079, 327680, 0, -65543, 327680, 0, -7, 327680, 0, 65529, 327680, 1, 131065, 327680, 0, 196601, 327680, 0, 262137, 327680, 0, 327673, 327680, 0, 393209, 327680, 0, 458745, 327680, 0, 524281, 327680, 0, 589817, 327680, 0, -524294, 327680, 0, -458758, 327680, 0, -393222, 327680, 0, -327686, 327680, 0, -262150, 327680, 0, -196614, 327680, 0, -131078, 327680, 0, -65542, 327680, 0, -6, 327680, 0, 65530, 327680, 0, 131066, 327680, 0, 196602, 327680, 0, 262138, 327680, 0, 327674, 327680, 0, 393210, 327680, 0, 458746, 327680, 0, 524282, 327680, 0, 589818, 327680, 0, -524293, 327680, 0, -458757, 327680, 0, -393221, 327680, 0, -327685, 327680, 0, -262149, 327680, 0, -196613, 327680, 0, -131077, 327680, 0, -65541, 327680, 0, -5, 327680, 0, 65531, 393216, 1, 131067, 327680, 0, 196603, 393216, 1, 262139, 327680, 0, 327675, 327680, 0, 393211, 327680, 0, 458747, 327680, 0, 524283, 327680, 0, 589819, 327680, 0, -524292, 327680, 0, -458756, 327680, 0, -393220, 327680, 0, -327684, 327680, 0, -262148, 327680, 0, -196612, 327680, 0, -131076, 327680, 0, -65540, 327680, 0, -4, 327680, 0, 65532, 327680, 0, 131068, 327680, 0, 196604, 327680, 0, 262140, 327680, 0, 327676, 327680, 0, 393212, 327680, 0, 458748, 327680, 0, 524284, 327680, 0, 589820, 327680, 0, -524291, 327680, 0, -458755, 327680, 0, -393219, 327680, 0, -327683, 327680, 0, -262147, 393216, 1, -196611, 327680, 0, -131075, 327680, 0, -65539, 327680, 0, -3, 327680, 0, 65533, 327680, 0, 131069, 327680, 0, 196605, 327680, 0, 262141, 327680, 0, 327677, 327680, 0, 393213, 327680, 0, 458749, 327680, 0, 524285, 327680, 0, 589821, 327680, 0, -524290, 327680, 0, -458754, 327680, 0, -393218, 327680, 0, -327682, 327680, 0, -262146, 327680, 0, -196610, 327680, 0, -131074, 327680, 0, -65538, 327680, 0, -2, 327680, 0, 65534, 327680, 0, 131070, 327680, 0, 196606, 327680, 0, 262142, 327680, 0, 327678, 327680, 0, 393214, 327680, 0, 458750, 327680, 1, 524286, 327680, 0, 589822, 327680, 0, -524289, 327680, 0, -458753, 327680, 0, -393217, 327680, 0, -327681, 393216, 0, -262145, 327680, 0, -196609, 327680, 0, -131073, 327680, 0, -65537, 327680, 0, -1, 327680, 0, 65535, 327680, 0, 131071, 327680, 0, 196607, 327680, 0, 262143, 327680, 0, 327679, 327680, 0, 393215, 327680, 0, 458751, 327680, 0, 524287, 327680, 0, 589823, 327680, 0, -589824, 327680, 0, -524288, 327680, 0, -458752, 327680, 0, -393216, 327680, 0, -327680, 327680, 0, -262144, 327680, 0, -196608, 327680, 0, -131072, 327680, 0, -65536, 327680, 0, 0, 327680, 0, 65536, 327680, 0, 131072, 327680, 0, 196608, 327680, 0, 262144, 327680, 0, 327680, 393216, 0, 393216, 327680, 0, 458752, 327680, 0, 524288, 327680, 0, -589823, 327680, 0, -524287, 327680, 0, -458751, 327680, 0, -393215, 327680, 0, -327679, 327680, 0, -262143, 327680, 0, -196607, 327680, 0, -131071, 327680, 0, -65535, 327680, 0, 1, 327680, 0, 65537, 327680, 0, 131073, 327680, 0, 196609, 327680, 0, 262145, 327680, 0, 327681, 327680, 0, 393217, 327680, 0, 458753, 327680, 0, 524289, 327680, 0, -589822, 327680, 0, -524286, 327680, 0, -458750, 327680, 0, -393214, 327680, 0, -327678, 327680, 1, -262142, 393216, 0, -196606, 327680, 0, -131070, 327680, 0, -65534, 327680, 0, 2, 327680, 0, 65538, 327680, 0, 131074, 393216, 1, 196610, 327680, 0, 262146, 327680, 0, 327682, 327680, 0, 393218, 327680, 0, 458754, 327680, 0, 524290, 327680, 0, -589821, 327680, 0, -524285, 327680, 0, -458749, 327680, 0, -393213, 327680, 0, -327677, 327680, 0, -262141, 327680, 1, -196605, 327680, 0, -131069, 327680, 0, -65533, 327680, 0, 3, 327680, 0, 65539, 327680, 0, 131075, 327680, 0, 196611, 327680, 0, 262147, 327680, 0, 327683, 327680, 0, 393219, 327680, 0, 458755, 327680, 0, 524291, 327680, 0, -589820, 327680, 0, -524284, 327680, 0, -458748, 327680, 0, -393212, 327680, 0, -327676, 327680, 0, -262140, 327680, 0, -196604, 327680, 0, -131068, 327680, 0, -65532, 327680, 0, 4, 327680, 0, 65540, 327680, 0, 131076, 327680, 0, 196612, 327680, 0, 262148, 393216, 1, 327684, 327680, 0, 393220, 327680, 0, 458756, 327680, 0, 524292, 327680, 0, -589819, 327680, 0, -524283, 327680, 0, -458747, 327680, 1, -393211, 327680, 0, -327675, 327680, 0, -262139, 327680, 0, -196603, 327680, 1, -131067, 327680, 1, -65531, 327680, 0, 5, 327680, 1, 65541, 327680, 1, 131077, 327680, 0, 196613, 327680, 0, 262149, 327680, 0, 327685, 327680, 0, 393221, 327680, 0, 458757, 327680, 0, 524293, 327680, 0, -589818, 327680, 0, -524282, 327680, 0, -458746, 327680, 0, -393210, 327680, 0, -327674, 327680, 0, -262138, 327680, 0, -196602, 327680, 1, -131066, 327680, 0, -65530, 327680, 0, 6, 327680, 0, 65542, 327680, 0, 131078, 327680, 0, 196614, 327680, 0, 262150, 327680, 0, 327686, 327680, 0, 393222, 327680, 0, 458758, 327680, 0, 524294, 327680, 0, -589817, 327680, 0, -524281, 327680, 0, -458745, 327680, 0, -393209, 393216, 0, -327673, 327680, 0, -262137, 327680, 0, -196601, 327680, 0, -131065, 327680, 0, -65529, 327680, 0, 7, 327680, 0, 65543, 327680, 0, 131079, 327680, 0, 196615, 327680, 0, 262151, 327680, 0, 327687, 327680, 0, 393223, 327680, 0, 458759, 327680, 0, 524295, 327680, 0, -589816, 327680, 0, -524280, 327680, 0, -458744, 327680, 0, -393208, 327680, 0, -327672, 327680, 0, -262136, 327680, 0, -196600, 393216, 1, -131064, 327680, 0, -65528, 327680, 0, 8, 327680, 0, 65544, 327680, 0, 131080, 327680, 0, 196616, 327680, 0, 262152, 393216, 0, 327688, 327680, 0, 393224, 393216, 0, 458760, 327680, 0, 524296, 327680, 0, -589815, 327680, 0, -524279, 327680, 0, -458743, 327680, 0, -393207, 327680, 0, -327671, 327680, 0, -262135, 327680, 0, -196599, 327680, 0, -131063, 327680, 0, -65527, 393216, 0, 9, 327680, 0, 65545, 393216, 0, 131081, 327680, 0, 196617, 327680, 0, 262153, 327680, 0, 327689, 327680, 0, 393225, 327680, 0, 458761, 327680, 0, 524297, 327680, 0, -589814, 327680, 0, -524278, 327680, 0, -458742, 327680, 0, -393206, 327680, 0, -327670, 327680, 0, -262134, 327680, 0, -196598, 327680, 0, -131062, 327680, 0, -65526, 327680, 0, 10, 327680, 0, 65546, 327680, 0, 131082, 327680, 0, 196618, 393216, 0, 262154, 327680, 0, 327690, 327680, 0, 393226, 327680, 0, 458762, 327680, 0, 524298, 327680, 0, -589813, 327680, 0, -524277, 327680, 0, -458741, 327680, 0, -393205, 327680, 0, -327669, 327680, 0, -262133, 327680, 0, -196597, 327680, 0, -131061, 327680, 0, -65525, 327680, 0, 11, 327680, 0, 65547, 393216, 0, 131083, 327680, 0, 196619, 327680, 0, 262155, 327680, 0, 327691, 327680, 0, 393227, 327680, 0, 458763, 327680, 0, 524299, 327680, 0, -589812, 327680, 0, -524276, 327680, 0, -458740, 327680, 0, -393204, 327680, 0, -327668, 327680, 0, -262132, 327680, 0, -196596, 327680, 0, -131060, 327680, 0, -65524, 327680, 0, 12, 327680, 0, 65548, 327680, 0, 131084, 327680, 0, 196620, 327680, 0, 262156, 327680, 0, 327692, 327680, 0, 393228, 327680, 0, 458764, 327680, 0, 524300, 327680, 0, -589811, 327680, 0, -524275, 327680, 0, -458739, 327680, 0, -393203, 327680, 0, -327667, 327680, 0, -262131, 327680, 0, -196595, 327680, 0, -131059, 327680, 0, -65523, 327680, 0, 13, 327680, 0, 65549, 327680, 0, 131085, 327680, 0, 196621, 327680, 0, 262157, 327680, 0, 327693, 327680, 0, 393229, 327680, 0, 458765, 327680, 0, 524301, 327680, 0, -589810, 327680, 0, -524274, 327680, 0, -458738, 327680, 0, -393202, 327680, 0, -327666, 327680, 0, -262130, 327680, 0, -196594, 327680, 0, -131058, 327680, 0, -65522, 327680, 0, 14, 327680, 0, 65550, 327680, 0, 131086, 327680, 0, 196622, 327680, 0, 262158, 327680, 0, 327694, 327680, 0, 393230, 327680, 0, 458766, 327680, 0, 524302, 327680, 0, -589809, 327680, 0, -524273, 327680, 0, -458737, 327680, 0, -393201, 327680, 0, -327665, 327680, 0, -262129, 327680, 0, -196593, 327680, 0, -131057, 327680, 0, -65521, 327680, 0, 15, 327680, 0, 65551, 327680, 0, 131087, 327680, 0, 196623, 327680, 0, 262159, 327680, 0, 327695, 327680, 0, 393231, 327680, 0, 458767, 327680, 0, 524303, 327680, 0)

[node name="StuffOnGround" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_a4xcf")
format = 2
layer_0/tile_data = PackedInt32Array(-262151, 327680, 0, -196615, 327680, 0, -131079, 327680, 0, -262150, 327680, 0, -196614, 327680, 0, -131078, 327680, 0, -262149, 327680, 0, -196613, 327680, 0, -131077, 327680, 0, -524276, 1179648, 10, 393227, 1179648, 10, 262152, 327680, 0, 131080, 327680, 0, 196616, 393216, 1, 262151, 327680, 0, 196615, 327680, 1, 393221, 327680, 1, 458754, 327680, 1, 262136, 327680, 1, -196616, 327680, 1, -393220, 327680, 1, -524282, 327680, 1, -458743, 327680, 1, -458762, 458752, 0, -393226, 458752, 1, -327690, 458752, 2, -458761, 524288, 0, -393225, 524288, 1, -327689, 524288, 2, -458760, 589824, 0, -393224, 589824, 1, -327688, 589824, 2, -458741, 1179648, 9, -327668, 1179648, 9, -458739, 1179648, 11, -393203, 1179648, 12, -458744, 1179648, 10, -262135, 458752, 0, -196599, 458752, 1, -131063, 458752, 2, -262134, 524288, 0, -196598, 524288, 1, -131062, 524288, 2, -262133, 589824, 0, -196597, 589824, 1, -131061, 589824, 2, -8, 393216, 0, -393227, 393216, 0, 524283, 393216, 0, -65524, 393216, 1)

[node name="CityWalls" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_a4xcf")
format = 2
layer_0/tile_data = PackedInt32Array(-4, 1441792, 2, 65532, 1441792, 3, 131068, 1441792, 4, 196604, 1441792, 5, -3, 1507328, 2, 65533, 1507328, 3, 131069, 1507328, 4, 196605, 1507328, 5, -2, 1507328, 2, 65534, 1507328, 3, 131070, 1507328, 4, 196606, 1507328, 5, -1, 1507328, 2, 65535, 1507328, 3, 131071, 1507328, 4, 196607, 1507328, 5, -65536, 1507328, 2, 0, 1507328, 3, 65536, 1507328, 4, 131072, 1507328, 5, -65535, 1507328, 2, 1, 1507328, 3, 65537, 1507328, 4, 131073, 1507328, 5, -65534, 1507328, 2, 2, 1507328, 3, 65538, 1507328, 4, 131074, 1507328, 5, -65533, 1507328, 2, 3, 1507328, 3, 65539, 1507328, 4, 131075, 1507328, 5, -65532, 1572864, 2, 4, 1572864, 3, 65540, 1572864, 4, 131076, 1572864, 5, -65540, 1441792, 1, -65539, 1507328, 1, -131076, 1441792, 1, -131075, 1507328, 1, -196612, 1441792, 1, -196611, 1507328, 1, -131069, 1507328, 1, -131068, 1572864, 1, -196605, 1507328, 1, -196604, 1572864, 1, -262141, 1507328, 1, -262140, 1572864, 1, -262148, 1441792, 0, -262147, 1507328, 0, -327677, 1507328, 0, -327676, 1572864, 0, -327678, 1507328, 0, -262142, 1507328, 1, -327679, 1507328, 0, -262143, 1507328, 1, -327680, 1507328, 0, -262144, 1507328, 1, -262145, 1507328, 0, -196609, 1507328, 1, -262146, 1507328, 0, -196610, 1507328, 1, -196608, 1507328, 1, -131073, 1507328, 1, -131074, 1507328, 1, -65538, 1507328, 1, -65537, 1507328, 1, -131072, 1507328, 1, -131071, 1507328, 1, -196607, 1507328, 1, -196606, 1507328, 1, -131070, 1507328, 1)

[node name="CityDoors" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_a4xcf")
format = 2
layer_0/tile_data = PackedInt32Array(65538, 1638400, 10, 131074, 1638400, 11, 196610, 1638400, 12, 65539, 1703936, 10, 131075, 1703936, 11, 65540, 1769472, 10, 131076, 1769472, 11, 196612, 1769472, 12, 131068, 1638400, 10, 196604, 1638400, 11, 262140, 1638400, 12, 131069, 1703936, 10, 196605, 1703936, 11, 131070, 1769472, 10, 196606, 1769472, 11, 262142, 1769472, 12)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(9, 66)
script = ExtResource("8_typ0w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_meetu")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
visible = false
scale = Vector2(0.179688, 0.179688)
texture = ExtResource("9_eam0l")

[node name="Sprite2D2" type="Sprite2D" parent="CharacterBody2D"]
texture_filter = 1
scale = Vector2(0.46875, 0.46875)
texture = ExtResource("2_qa7rh")
hframes = 12
vframes = 8
frame = 36
script = ExtResource("3_38k2e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D/Sprite2D2"]
libraries = {
"": SubResource("AnimationLibrary_v4kk3")
}

[connection signal="change_question" from="GameManager" to="CanvasLayer" method="_on_game_manager_change_question"]
[connection signal="change_question_text" from="GameManager" to="CanvasLayer" method="_on_game_manager_change_question_text"]
[connection signal="clear_messages" from="GameManager" to="CanvasLayer" method="_on_game_manager_clear_messages"]
[connection signal="correct_answer" from="GameManager" to="CanvasLayer" method="_on_game_manager_correct_answer"]
[connection signal="incorrect_answer" from="GameManager" to="CanvasLayer" method="_on_game_manager_incorrect_answer"]
[connection signal="set_possible_points" from="GameManager" to="CanvasLayer" method="_on_game_manager_set_possible_points"]
